apps/apprise/install/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise
  namespace: apprise
  labels:
    app: apprise
    app.kubernetes.io/name: apprise
    app.kubernetes.io/part-of: apprise
    app.kubernetes.io/instance: apprise
    app.kubernetes.io/component: apprise
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "LinuxServer.io images do not require a read-only root filesystem"
    ignore-check.kube-linter.io/run-as-non-root: "LinuxServer.io images do not require a non-root user"
    ignore-check.kube-linter.io/latest-tag: "This deployment intentionally uses the latest tag"
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: apprise
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apprise
        app.kubernetes.io/part-of: apprise
        app.kubernetes.io/instance: apprise
        app.kubernetes.io/component: apprise
        app: apprise
    spec:
      containers:
        - name: apprise
          image: lscr.io/linuxserver/apprise-api:v1.2.0-ls193
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false  # prevent sudo, etc.
          resources:
            requests:
              cpu: 100m
              memory: 96Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /status
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - name: attachments
              mountPath: /attachments
            - name: config
              mountPath: /config
            - name: apprise-config
              mountPath: /config/apprise.yml
              subPath: apprise.yml
        - name: mailrise
          image: yoryan/mailrise:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 999          # hardcode user to non-root if not set in Dockerfile
            runAsGroup: 999         # hardcode group to non-root if not set in Dockerfile
            runAsNonRoot: true       # hardcode to non-root. Redundant to above if Dockerfile is set USER 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false               # prevent acting like host root
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 8025
              name: mailsecure
              protocol: TCP
          volumeMounts:
            - name: mailrise-config
              mountPath: /etc/mailrise.conf
              subPath: mailrise.conf
      restartPolicy: Always
      volumes:
        - name: attachments
          emptyDir: {}
        - name: config
          emptyDir: {}
        - name: apprise-config
          secret:
            secretName: apprise-config
        - name: mailrise-config
          configMap:
            name: mailrise-config
      securityContext:
        fsGroup: 1000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - apprise
              topologyKey: kubernetes.io/hostname
