apps/apprise/install/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apprise
  namespace: apprise
spec:
  type: ClusterIP
  selector:
    app: apprise
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: mailsecure
      protocol: TCP
      port: 8025
      targetPort: 8025
