apps/apprise/install/ingressrouteTCP.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailrise
  namespace: apprise
spec:
  ingressClassName: traefik-external
  entryPoints:
    - mailsecure
  routes:
    - match: HostSNI(`*`)
      priority: 35
      services:
        - name: apprise
          namespace: apprise
          port: 8025
          nativeLB: true
  tls:
    secretName: local-asztalos-net-tls
